--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.5/axios.min.js" integrity="sha512-JEXkqJItqNp0+qvX53ETuwTLoz/r1Tn5yTRnZWWz0ghMKM2WFCEYLdQnsdcYnryMNANMAnxNcBa/dN7wQtESdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+
+  <script src="./assets/js/index.js" defer></script>
   
   <title>IP Address Tracker</title>
 
@@ -18,19 +24,49 @@
 </head>
 <body>
 
-  IP Address Tracker
+  <header>
+    <div class="header-img">
+      <img src="./assets/images/pattern-bg.png" alt="bckground-img">
+      <div class="header-content">
+        <h1>IP Adress Tracker</h1>
+        <div class="header-input">
+          <input type="text" placeholder="Search for any IP adress or domain">
+          <button class="submit"> <img src="./assets/images/icon-arrow.svg" alt="arrow"></button>
+        </div>
+      </div>
+    </div>
+  </header>
 
-  Search for any IP address or domain
+  <section id="ip-adress">
+      <ul>
+        <li>
+          <h2>ip adress</h2>
+          <span class="ip"></span>
+        </li>
+        <li>
+          <h2>location</h2>
+          <span class="location"></span>
+        </li>
+        <li>
+          <h2>timezone</h2>
+          <span class="timezone"></span>
+        </li>
+        <li>
+          <h2>isp</h2>
+          <span class="isp"></span>
+        </li>
+      </ul>
+  </section>
 
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+  <div id="map"></div>
+  <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAtTwMx2OsK4Wk5HidozFBsz_0OQ_pJbo&callback=initMap"
+  ></script>
+
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
